--- a/gh-pages/_includes/bottom-menu.html
+++ b/gh-pages/_includes/bottom-menu.html
@@ -22,7 +22,7 @@
               <a class="btn btn-default" href="jsdoc/index.html"><i class="fa fa-code"></i> JS Doc</a>
             </li>
             <li>
-              <a class="btn btn-default" href="LICENSE.html"><i class="fa fa-legal"></i> License</a>
+              <a class="btn btn-default" href="https://github.com/T1st3/xmlrpc-message-umd/blob/master/LICENSE"><i class="fa fa-legal"></i> License</a>
             </li>
           </ul>
         </div>
