--- a/gh-pages/_includes/header.html
+++ b/gh-pages/_includes/header.html
@@ -42,7 +42,7 @@
                   <a href="jsdoc/index.html"><i class="fa fa-code"></i> JS Doc</a>
                 </li>
                 <li>
-                  <a href="LICENSE.html"><i class="fa fa-legal"></i> License</a>
+                  <a href="https://github.com/T1st3/xmlrpc-message-umd/blob/master/LICENSE"><i class="fa fa-legal"></i> License</a>
                 </li>
               </ul>
             </li>
