--- a/gh-pages/_layouts/index.html
+++ b/gh-pages/_layouts/index.html
@@ -1,4 +1,5 @@
 {% include head.html %}
+    <link rel="stylesheet" href="assets/css/codemirror.css">
     <link rel="stylesheet" href="assets/css/t1st3.css">
     <script type="text/javascript" src="lib/modernizr.js"></script>
 {% include header.html %}
