--- a/gh-pages/assets/css/t1st3.css
+++ b/gh-pages/assets/css/t1st3.css
@@ -31,7 +31,7 @@ hr {
 }
 
 a {
-  color: #fff;
+  color: #428bca;
   text-shadow: none;
 }
 
@@ -43,15 +43,24 @@ ul {
   list-style-type: none;
 }
 
-.navbar-default {
-  background: #151515 url("../img/page-back.png") 0 0;
-  border-bottom: 1px dashed #b5e853;
+#ghribbon {
+  display: none;
+  position: fixed;
+  top: 50px;
+  right: 0;
+  border: 0;
+  z-index: 1000;
 }
 
 @media (min-width: 768px) {
-  .navbar-right {
-    margin-left: 30px;
+  #ghribbon {
+    display: block;
   }
+}
+
+.navbar-default {
+  background: #151515 url("../img/page-back.png") 0 0;
+  border-bottom: 3px dashed #b5e853;
 }
 
 .navbar-default .navbar-brand {
@@ -115,31 +124,23 @@ ul {
 }
 
 #main h2 {
-  padding-top: 40px;
+  padding-top: 30px;
   border-top: 1px dashed #b5e853;
+  margin-top: 30px;
 }
 
 #mocha {
 
 }
 
-#bottom {
-  background: #151515 url("../img/page-back.png") 0 0;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  border-top: 1px dashed #b5e853;
-  border-radius: 0;
-}
-
-#bottom .nav>li>a:hover, .nav>li>a:focus {
-  background-color: #b5e853;
-  color: #000;
+#footer-wrap {
+  border-top: 3px dashed #b5e853;
 }
 
 #footer {
-  border-top: 1px dashed #b5e853;
   text-align: center;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 #footer .btn-default {
@@ -152,4 +153,17 @@ ul {
 #footer .btn-default:hover, #footer .btn-default:focus, #footer .btn-default:active, #footer .btn-default.active, #footer .open .dropdown-toggle.btn-default {
   background-color: #ebebeb;
   color: #333;
+}
+
+#bottom {
+  background: #151515 url("../img/page-back.png") 0 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border-top: 3px dashed #b5e853;
+  border-radius: 0;
+}
+
+#bottom .nav>li>a:hover, .nav>li>a:focus {
+  background-color: #b5e853;
+  color: #000;
 }
