Fix in gh-pages

--- a/gh-pages/_includes/index_content.html
+++ b/gh-pages/_includes/index_content.html
@@ -12,6 +12,7 @@ var obj = new Object();
 obj.x = 20;
 obj.y = "cow";
 obj.z = 3.14;
+var date = new Date();
 var msg = new XMLRPCMessage();
 msg.setMethod("system.myMethod");
 msg.addParameter("mississippi");
