Update structure and docs

--- a/docs/assets/css/t1st3.css
+++ b/docs/assets/css/t1st3.css
@@ -113,7 +113,7 @@ ul {
   padding-bottom: 60px;
 }
 
-#main li:before {
+#main ul li:before {
   content: ">>";
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
